syntax = "proto3";

package protopkg;
option go_package = "github.com/4rchr4y/goray/internal/proto/protopkg";

message Schema {
    message Block {
        repeated Attribute attributes = 1;
        repeated NestedBlock block_types = 2;
        string description = 3;
        bool deprecated = 4;
    }

    message Attribute {
        string name = 1;
        bytes type = 2;
        Object nested_type = 3;
        string description = 4;
        bool required = 5;
        bool optional = 6;
        bool deprecated = 7;
    }

    enum NestingMode {
        INVALID = 0;
    }

    message NestedBlock {
        string name = 1;
        Block block = 2;
        NestingMode nesting = 3;
    }

    message Object {
        repeated Attribute attributes = 1;
        NestingMode nesting = 3;
    }


    int64 version = 1;
    Block root = 2;
}